--- a/.classpath
+++ b/.classpath
@@ -39,5 +39,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-22/lib/jrt-fs.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dibya/Downloads/extentreports-5.1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
